# firmware

./: .bashrc  .clang-format  .clang-format-ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dashboard26.tft  Dockerfile  Doxyfile  FreeRTOSConfig_8h.html  FreeRTOSConfig_8h.js  FreeRTOSConfig_8h_source.html  MC__PL0_8c.html  MC__PL0_8h.html  MC__PL0_8h_source.html  MC__PL0__data_8c.html  MC__PL0__types_8h.html  MC__PL0__types_8h_source.html  MC__PL__pp_8c.html  MC__PL__pp_8h.html  MC__PL__pp_8h_source.html  README.md  README_8md.html  SFS_8c.html  SFS_8h.html  SFS_8h_source.html  SFS__data_8c.html  a__box_2bmi_2bmi088_8c.html  a__box_2bmi_2bmi088_8h.html  a__box_2bmi_2bmi088_8h_source.html  a__box_2bms_2bms_8c.html  a__box_2bms_2bms_8h.html  a__box_2bms_2bms_8h_source.html  a__box_2bsxlite_2bsxlite__interface_8h.html  a__box_2bsxlite_2bsxlite__interface_8h_source.html  a__box_2can_2can__parse_8c.html  a__box_2can_2can__parse_8h.html  a__box_2can_2can__parse_8h_source.html  a__box_2can_2can__parse__starter_8c.html  (+2473 more)
common/adbms/: CMakeLists.txt  adbms.c  adbms.h  adbms6380.c  adbms6380.h  bms.h  commands.c  commands.h  pec.c  pec.h
common/amk/: CMakeLists.txt  README.md  ThirdCar.aipex  amk.c  amk.h  amk2.c  amk2.h
common/amk/configs/: PER25_ThirdCar.aipex  per26-benchtop-120vx4.aipex  per26-with-regen.aipex
common/bootloader/: CMakeLists.txt  README.md  bootlaoder_common.c  bootloader.c  bootloader.h  bootloader_common.c  bootloader_common.h  bootloader_download.py
common/daq/: CMakeLists.txt  README.md  can_config.json  can_gen.py  can_parse_base.c  can_parse_base.h  can_schema.json  daq_base.c  daq_base.h  daq_config.json  daq_schema.json  dbc_gen.py  fault_config.json  fault_schema.json  faults.h  per_dbc.dbc  per_dbc_CCAN.dbc  per_dbc_MCAN.dbc  per_dbc_Test.dbc  per_dbc_VCAN.dbc  splitter.py
common/daq/generation/: gen_config.json  gen_dbc.py  gen_embedded_can.py  gen_embedded_daq.py  gen_faults.py  generator.py
common/daq/node_configs/: BITSTREAM.json  Charger.json  Dashboard.json  InverterA.json  InverterB.json  Main_Module.json  OrionBMS.json  PDU.json  Steering.json  TEST_NODE.json  TEST_NODE_2.json  a_box.json  bootloader.json  daq.json  front_driveline.json  torque_vector.json
common/daq/split_nodes/: BITSTREAM.json  Dashboard.json  InverterA.json  InverterB.json  Main_Module.json  OrionBMS.json  PDU.json  Steering.json  TEST_NODE.json  daq.json  torque_vector.json
common/daq/templates/: can_parse_template.c  can_parse_template.h  daq_template.c  daq_template.h
common/faults/: CMakeLists.txt  README.md  fault_config.json  fault_nodes.h  fault_schema.json  faults.c  faults.h  faults.json  faults_common.c
common/faults/generation/: gen_config.json  gen_faults.py  gen_header.py  generator.py
common/faults/templates/: faults.h  faults_template.c  faults_template.h
common/freertos/: CMakeLists.txt  FreeRTOSConfig.h  README.md  freertos.c  freertos.h  runtime_stats.c  runtime_stats.h
common/log/: CMakeLists.txt  log.c  log.h  vsprintf.c  vsprintf.h
common/phal_G4/: CMakeLists.txt  phal_G4.h
common/phal_G4/adc/: adc.c  adc.h
common/phal_G4/crc/: crc.c  crc.h
common/phal_G4/dma/: dma.c  dma.h
common/phal_G4/fdcan/: fdcan.c  fdcan.h  fdcan_priv.h
common/phal_G4/flash/: flash.c  flash.h
common/phal_G4/gpio/: gpio.c  gpio.h
common/phal_G4/rcc/: rcc.c  rcc.h
common/phal_G4/spi/: spi.c  spi.h
common/phal_G4/usart/: usart.c  usart.h
common/phal_L4/: CMakeLists.txt
common/phal_L4/adc/: adc.c  adc.h
common/phal_L4/can/: can.c  can.h
common/phal_L4/dma/: dma.c  dma.h
common/phal_L4/eeprom/: eeprom.c  eeprom.h
common/phal_L4/eeprom_spi/: eeprom_spi.c  eeprom_spi.h
common/phal_L4/flash/: flash.c  flash.h
common/phal_L4/gpio/: gpio.c  gpio.h
common/phal_L4/i2c/: i2c.c  i2c.h
common/phal_L4/i2c_alt/: i2c_alt.c  i2c_alt.h
common/phal_L4/quadspi/: quadspi.c  quadspi.h
common/phal_L4/rcc/: rcc.c  rcc.h
common/phal_L4/spi/: spi.c  spi.h
common/phal_L4/tim/: tim.c  tim.h
common/phal_L4/usart/: usart.c  usart.h
common/plettenberg/: CMakeLists.txt  plettenberg.c  plettenberg.h
common/profiling/: CMakeLists.txt  profiling.c  profiling.h
common/psched/: CMakeLists.txt  README.md  core.c  core.h  notes.txt  profile.h  psched.c  psched.h  schedule.c  schedule.h  test.c  test.h
common/queue/: CMakeLists.txt  README.md  queue.c  queue.h
common/syscalls/: CMakeLists.txt  syscalls.c  syscalls.h
common/uds/: CMakeLists.txt  uds.c  uds.h
components/PEDAL/: CMakeLists.txt  main.c
components/PEDAL/pedals/: pedals.h
components/main_module/: CMakeLists.txt  main.c
components/main_module/freertos/: FreeRTOSConfig.h
components/main_module/hal/: stm32l4xx_hal_conf.h
components/pedal/: CMakeLists.txt
components/pedal/pedals/: pedals.c
firmware/: CMakeLists.txt  toolchain.cmake
firmware/cmake/: FindCMSIS.cmake  STM32CubeL4.cmake  toolchain.cmake
firmware/main/: CMakeLists.txt  main.c
firmware/main/apps/: apps.c  apps.h  (+1 more)
firmware/main_module/: CMakeLists.txt  main.c
source/a_box/: CMakeLists.txt  README.md  charging.c  charging.daqview  imd.c  main.c  main.h  telem.c  telem.h  thermistor.c
source/bms/: CMakeLists.txt  afe.c  afe.h  bms.c  bms.h  bms_view.tsp  charge.c  charge.h  main.c  main.h  node_defs.h  temp.c  temp.h  untitled.tsc
source/bootloader/: CMakeLists.txt  README.md  bootloader.c  main.c  node_defs.h
source/bootloader_l4/: CMakeLists.txt  main.c  node_defs.h
source/daq/: CMakeLists.txt  README.md  ethernet.c  ethernet.h  gs_usb.h  main.c  main.h  timestamped_frame.h
source/dashboard/: CMakeLists.txt  README.md  dashboard.daqview  main.c  main.h
source/driveline/: CMakeLists.txt  README.md  amb_temp_table.c  amb_temp_table.h  config.h  main.c  main.h  oil_temp_table.c  oil_temp_table.h  pin_defs.h  water_temp_table.c  water_temp_table.h
source/f4_example/: CMakeLists.txt  README.md  main.c
source/f4_testing/: CMakeLists.txt  README.md  brake-temps.c  canpiler.c  f4_testing.h  freertos_demo.c  imd_decode.c  led_blink.c  main.c  main.h  onboarding_26.c  pwm.c  pwm_testing.c
(+1120 files in other folders)
